--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/blockbuster
+spring.datasource.url=jdbc:mysql://localhost:3306/blockbuster2
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=ROOT
 
 spring.jpa.hibernate.ddl-auto=update
